--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,31 @@
-encoding: utf-8
-baseurl : 
+# Site settings
+title: Lasy
+description: 刘树元（Liu Shuyuan）
+favicon: /assets/img/avatar.JPG
+baseurl:
+url: https://blog.lasy.tk
+rss_url:
+
+# Build settings
+
+highlight: true
+#highlighter: rouge
+
+timezone: Asia/Jiangxi
+
+markdown: kramdown
+kramdown:
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+
+  coderay:
+    coderay_wrap: div
+    coderay_line_numbers: inline
+    coderay_line_numbers_start: 1
+    coderay_tab_width: 4
+    coderay_bold_every: 10
+    coderay_css: style
