--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,10 +1,10 @@
 # Author settings
 name: 刘树元
-title: Android 开发工程师
+title: 前端工程师
 address: 中国, 江西, 南昌
 email: dash0forward@gmail.com
 github: LasyIsLazy
-gavatar: /assets/img/avatar.JPG
+gavatar: /assets/img/avatar.png
 
 educationHistory:
 - education1:
