--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "devDependencies": {
     "vuepress": "^0.14.10"
   },
+  "resolutions": {
+    "webpack-dev-middleware": "3.6.0"
+  },
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
