升级 vuepress 到 1.0 版本

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "1255352506@qq.com",
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^0.14.10"
+    "vuepress": "^1.0.0-alpha.44"
   },
   "resolutions": {
     "webpack-dev-middleware": "3.6.0"
