--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Build
+      name: Build
     - uses: actions/setup-node@v1
       with:
         node-version: '10.x'
     - run: npm install && npm run build
     - run: ls
     - name: FTP Deploy
-    - uses: SamKirkland/FTP-Deploy-Action@2.0.0
-    env:
-        FTP_SERVER: qxu1098320196.my3w.com
-        FTP_USERNAME: qxu1098320196
-        FTP_PASSWORD: ${{ secrets.BLOG_FTP_PASSWORD }}
+      uses: SamKirkland/FTP-Deploy-Action@2.0.0
+      env:
+          FTP_SERVER: qxu1098320196.my3w.com
+          FTP_USERNAME: qxu1098320196
+          FTP_PASSWORD: ${{ secrets.BLOG_FTP_PASSWORD }}
