--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
           FTP_PASSWORD: ${{ secrets.BLOG_FTP_PASSWORD }}
           LOCAL_DIR: docs/.vuepress/dist
           REMOTE_DIR: /htdocs
-          ARGS: --delete
+          ARGS: --delete --exclude=/logreport
