--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "1255352506@qq.com",
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.44",
-    "vuepress": "^1.0.0-alpha.44"
+    "@vuepress/plugin-back-to-top": "^1.2.0",
+    "vuepress": "^1.2.0"
   },
   "scripts": {
     "start": "yarn run dev || npm run dev",
