--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
         node-version: '10.x'
     - name: Build
       run: npm install && npm run build
+      env:  
+        LEANCLUOD_APP_ID: ${{ secrets.LEANCLUOD_APP_ID }}
+        LEANCLUOD_APP_KEY: ${{ secrets.LEANCLUOD_APP_KEY }}
     - name: FTP Deploy
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
