--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "yarn run dev || npm run dev",
-    "dev": "vuepress dev docs",
+    "dev": "set NODE_ENV=development && vuepress dev docs",
     "build": "vuepress build docs"
   },
   "dependencies": {}
