--- a/.github/workflows/backup-img.yml
+++ b/.github/workflows/backup-img.yml
@@ -2,8 +2,8 @@ name: Backup Image
 
 on:
   schedule:
-    # 每天 00:00
-    - cron: '0 0 * * *'
+    # 每周一 00:00
+    - cron: '0 0 ? * MON'
   push:
     paths:
       # MarkDown 文件变化
