--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
   "license": "MIT",
   "devDependencies": {
     "@actions/core": "^1.2.3",
+    "@vuepress/client": "2.0.0-beta.60",
     "axios": "^0.21.2",
     "commonmark": "^0.29.1",
     "ora": "^4.0.3",
-    "vuepress": "^1.2.0",
+    "vue": "^3.2.45",
+    "vuepress": "2.0.0-beta.60",
     "vuepress-theme-reco": "^1.2.0"
   },
   "scripts": {
     "start": "yarn run dev || npm run dev",
-    "dev": "set NODE_ENV=development&&vuepress dev docs",
+    "dev": "vuepress dev docs",
     "build": "vuepress build docs"
   },
-  "dependencies": {}
+  "volta": {
+    "node": "18.13.0",
+    "pnpm": "7.24.3"
+  }
 }
