--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
   "name": "lasy-blog",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Lasy's blog",
-  "main": "index.js",
   "repository": "https://github.com/LasyIsLazy/blog.git",
   "author": "1255352506@qq.com",
   "license": "MIT",
-  "devDependencies": {
-    "@actions/core": "^1.2.3",
-    "@vuepress/client": "2.0.0-beta.60",
-    "axios": "^0.21.2",
-    "commonmark": "^0.29.1",
-    "ora": "^4.0.3",
-    "vue": "^3.2.45",
-    "vuepress": "2.0.0-beta.60",
-    "vuepress-theme-reco": "^1.2.0"
-  },
   "scripts": {
-    "start": "yarn run dev || npm run dev",
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "dev": "vuepress dev .",
+    "start": "vuepress dev .",
+    "build": "vuepress build ."
+  },
+  "dependencies": {
+    "vuepress": "2.0.0-beta.60",
+    "vuepress-theme-reco": "2.0.0-beta.43"
   },
   "volta": {
     "node": "18.13.0",
