--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lasy-blog",
+  "name": "blog",
   "version": "2.0.0",
   "description": "Lasy's blog",
   "repository": "https://github.com/LasyIsLazy/blog.git",
@@ -11,8 +11,10 @@
     "build": "vuepress build ."
   },
   "dependencies": {
+    "@vuepress/client": "2.0.0-beta.60",
+    "vue": "^3.2.45",
     "vuepress": "2.0.0-beta.60",
-    "vuepress-theme-reco": "2.0.0-beta.43"
+    "vuepress-theme-reco": "2.0.0-beta.44"
   },
   "volta": {
     "node": "18.13.0",
