--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,20 +11,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+
+      - uses: actions/setup-node@v3
         with:
-          node-version: '10.x'
+          node-version: 18.13.0
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.24.3
+
       - name: Build
-        run: yarn && yarn build
-        env:
-          LEANCLOUD_APP_ID: ${{ secrets.LEANCLOUD_APP_ID }}
-          LEANCLOUD_APP_KEY: ${{ secrets.LEANCLOUD_APP_KEY }}
-      - name: FTP Deploy
-        uses: SamKirkland/FTP-Deploy-Action@2.0.0
-        env:
-          FTP_SERVER: qxu1098320196.my3w.com
-          FTP_USERNAME: qxu1098320196
-          FTP_PASSWORD: ${{ secrets.BLOG_FTP_PASSWORD }}
-          LOCAL_DIR: docs/.vuepress/dist
-          REMOTE_DIR: /htdocs
-          ARGS: --delete --transfer-all --exclude=logreport --verbose
+        run: pnpm build
+
+        uses: actions/upload-pages-artifact@v1
+        width:
+          path: .vuepress/dist
+
+      - name: Deploy
+        uses: actions/deploy-pages@v1
