--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
-    "recommendations": [
-        "streetsidesoftware.code-spell-checker",
-    ]
+  "recommendations": [
+    "streetsidesoftware.code-spell-checker",
+    "arahata.linter-actionlint"
+  ]
 }
