--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 7.24.3
+          run_install: true
 
       - name: Build
         run: pnpm build
