--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "pnpm": "7.24.3"
   },
   "devDependencies": {
-    "commonmark": "^0.30.0"
+    "axios": "^1.3.4",
+    "commonmark": "^0.30.0",
+    "ora": "^6.1.2"
   }
 }
