--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pnpm": "7.24.3"
   },
   "devDependencies": {
+    "@actions/core": "^1.10.0",
     "axios": "^1.3.4",
     "commonmark": "^0.30.0",
     "ora": "^5.4.1"
